--- a/xilinx-xrt/PKGBUILD
+++ b/xilinx-xrt/PKGBUILD
@@ -2,7 +2,7 @@ pkgname=xilinx-xrt
 pkgver=2021.2
 _pkgrelasever=2.12
 _pkgpatchver=427
-pkgrel=2
+pkgrel=3
 pkgdesc="Xilinx Run Time for FPGA, with its dkms modules"
 arch=('x86_64')
 url="https://github.com/Xilinx/XRT"
@@ -20,7 +20,7 @@ conflicts=('xrt-bin')
 #source=('https://www.xilinx.com/bin/public/openDownload?filename=xrt_202120.2.12.427_20.04-amd64-xrt.deb')
 #sha256sums=('10a410392d6ddf20dc58297b078c3e0054efeecef856935fabcb7fd6fe686302')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/Xilinx/XRT/archive/$pkgver.tar.gz")
-md5sums=('4d7fcc542422e053b29dbdc3a405698f')
+sha256sums=('0a52c554f78fb8f0f8277c9b3f68cb25e1e95489cd3e22d34c6239680e439009')
 
 build() {
 	export XRT_VERSION_PATCH=$_pkgpatchver
