--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@
 **/.MTREE
 **/.PKGINFO
 .vscode/**
+# Outputs by extra-x86_65-build
+PKGBUILD-namcap.log
+*-build.log
+*-package_*.log
+*-prepare.log
+*.pkg.tar*-namcap.log
