--- a/glibc-wsl1/PKGBUILD
+++ b/glibc-wsl1/PKGBUILD
@@ -11,12 +11,11 @@
 pkgbase=glibc-wsl1
 pkgname=(glibc-wsl1 lib32-glibc-wsl1)
 pkgver=2.35
-pkgrel=1
+pkgrel=2
 arch=(x86_64)
 url='https://www.gnu.org/software/libc'
 license=(GPL LGPL)
 makedepends=(git gd lib32-gcc-libs python)
-optdepends=('perl: for mtrace')
 options=(!strip staticlibs !lto)
 #_commit=3de512be7ea6053255afed6154db9ee31d4e557a
 #source=(git+https://sourceware.org/git/glibc.git#commit=$_commit
@@ -26,7 +25,10 @@ source=(https://ftp.gnu.org/gnu/glibc/glibc-$pkgver.tar.xz{,.sig}
         lib32-glibc.conf
         sdt.h sdt-config.h
         disable-clone3.diff
-        force-uname.patch)
+        0001-localedef-Update-LC_MONETARY-handling-Bug-28845.patch
+        0001-localedata-Do-not-generate-output-if-warnings-were-p.patch
+        force-uname.patch
+)
 validpgpkeys=(7273542B39962DF7B299931416792B4EA25340F8 # Carlos O'Donell
               BC7C7372637EC10C57D7AA6579C43DFBF1CF2187) # Siddhesh Poyarekar
 b2sums=('623c728884f070cd87ffeb9203f74206197c52405ac9bc44f3dd519a3468b8e8ae2536c883e5d17d94417dbd1e91775de2e674314e4ff7424f9720026d6b7063'
@@ -37,6 +39,8 @@ b2sums=('623c728884f070cd87ffeb9203f74206197c52405ac9bc44f3dd519a3468b8e8ae2536c
         'a6a5e2f2a627cc0d13d11a82458cfd0aa75ec1c5a3c7647e5d5a3bb1d4c0770887a3909bfda1236803d5bc9801bfd6251e13483e9adf797e4725332cd0d91a0e'
         '214e995e84b342fe7b2a7704ce011b7c7fc74c2971f98eeb3b4e677b99c860addc0a7d91b8dc0f0b8be7537782ee331999e02ba48f4ccc1c331b60f27d715678'
         'edef5f724f68ea95c6b0127bd13a10245f548afc381b2d0a6d1d06ee9f87b7dd89c6becd35d5ae722bf838594eb870a747f67f07f46e7d63f8c8d1a43cce4a52'
+        '3c4de02d6308a4d39693e6effa08894ae096397347e439b93b0b5328aba41a373f7f2eeb88c109970f69cca65aaa74ba14e384d6d033f6a913438f4f920854a6'
+        'b6014af23688ea971d7af38d58829c8016a0af63770b7f5e8bc986c13ea2cafefe0935ff483b1b37c87ebe3e652b6e0c48ab43dd8ae752d0ed7fecc3751432f4'
         '5b3f6dbfc8923d2b89ddf6c99d79edc4b6785dadcd69c82a5236ef60d91589c981b786d279f74dcd49ba52944e3b0508f795b4975e16d22d11e03fdc8f42434b')
 
 prepare() {
@@ -51,6 +55,11 @@ prepare() {
   # Patch src: https://patchwork.ozlabs.org/project/glibc/patch/87eebkf8ph.fsf@oldenburg.str.redhat.com/
   patch -Np1 -i "${srcdir}"/disable-clone3.diff
 
+  # Fix C.UTF-8 generation errors
+  # https://bugs.archlinux.org/task/73797
+  patch -Np1 -i "${srcdir}"/0001-localedef-Update-LC_MONETARY-handling-Bug-28845.patch
+  patch -Np1 -i "${srcdir}"/0001-localedata-Do-not-generate-output-if-warnings-were-p.patch
+
   # Use uname, instead of DSO, to check kernel version
   patch -p1 -i "$srcdir"/force-uname.patch
 }
@@ -60,15 +69,11 @@ build() {
       --prefix=/usr
       --with-headers=/usr/include
       --with-bugurl=https://bugs.archlinux.org/
-      --enable-add-ons
       --enable-bind-now
       --enable-cet
       --enable-kernel=4.4
-      --enable-lock-elision
       --enable-multi-arch
       --enable-stack-protector=strong
-      --enable-stackguard-randomization
-      --enable-static-pie
       --enable-systemtap
       --disable-profile
       --disable-crypt
@@ -106,7 +111,7 @@ build() {
   echo "CFLAGS += -Wp,-D_FORTIFY_SOURCE=2" >> configparms
   make -O
 
-  # build info pages manually for reprducibility
+  # build info pages manually for reproducibility
   make info
 
   cd "$srcdir/lib32-glibc-build"
@@ -155,7 +160,7 @@ check() {
 
   # The following tests fail due to restrictions in the Arch build system
   # The correct fix is to add the following to the systemd-nspawn call:
-  # --capability=CAP_IPC_LOCK --system-call-filter="@clock @pkey"
+  # --system-call-filter="@clock @memlock @pkey"
   skip_test test-errno-linux sysdeps/unix/sysv/linux/Makefile
   skip_test tst-ntp_gettime  sysdeps/unix/sysv/linux/Makefile
   skip_test tst-ntp_gettimex sysdeps/unix/sysv/linux/Makefile
@@ -177,7 +182,8 @@ check() {
 package_glibc-wsl1() {
   pkgdesc='GNU C Library, patched for WSL1'
   depends=('linux-api-headers>=4.10' tzdata filesystem)
-  optdepends=('gd: for memusagestat')
+  optdepends=('gd: for memusagestat'
+              'perl: for mtrace')
   provides=("glibc=$pkgver")
   conflicts=('glibc')
   install=glibc.install
@@ -185,11 +191,8 @@ package_glibc-wsl1() {
           etc/locale.gen
           etc/nscd.conf)
 
-  install -dm755 "$pkgdir/etc"
-  touch "$pkgdir/etc/ld.so.conf"
-
   make -C glibc-build install_root="$pkgdir" install
-  rm -f "$pkgdir"/etc/ld.so.{cache,conf}
+  rm -f "$pkgdir"/etc/ld.so.cache
 
   # Shipped in tzdata
   rm -f "$pkgdir"/usr/bin/{tzselect,zdump,zic}
@@ -217,11 +220,11 @@ package_glibc-wsl1() {
 
     # Do not strip these for gdb and valgrind functionality, but strip the rest
     find "$pkgdir"/usr/lib \
-      -not -name 'ld-*.so' \
-      -not -name 'libc-*.so' \
-      -not -name 'libpthread-*.so' \
-      -not -name 'libthread_db-*.so' \
-      -name '*-*.so' -type f -exec strip $STRIP_SHARED {} + 2> /dev/null || true
+      -not -name 'ld-*.so*' \
+      -not -name 'libc.so*' \
+      -not -name 'libpthread.so*' \
+      -not -name 'libthread_db.so*' \
+      -name '*.so*' -type f -exec strip $STRIP_SHARED {} + 2> /dev/null || true
   fi
 
   # Provide tracing probes to libstdc++ for exceptions, possibly for other
@@ -229,16 +232,13 @@ package_glibc-wsl1() {
   install -Dm644 "$srcdir/sdt.h" "$pkgdir/usr/include/sys/sdt.h"
   install -Dm644 "$srcdir/sdt-config.h" "$pkgdir/usr/include/sys/sdt-config.h"
 
-  # Provided by libxcrypt; keep the old shared library for backwards compatibility
-  rm -f "$pkgdir"/usr/include/crypt.h "$pkgdir"/usr/lib/libcrypt.{a,so}
-
   # Make copies of documentations
   find "$srcdir/glibc/" -maxdepth 1 -type f | grep '/[A-Z.]\{1,\}$' | xargs install -Dm644 -t "$pkgdir/usr/share/doc/glibc"
   install -Dm644 -t "$pkgdir/usr/share/licenses/glibc" "$srcdir/glibc/COPYING" "$srcdir/glibc/COPYING.LIB" "$srcdir/glibc/LICENSES"
 }
 
 package_lib32-glibc-wsl1() {
-  pkgdesc='GNU C Library (32-bit), patched for wsl1'
+  pkgdesc='GNU C Library (32-bit), patched for WSL1'
   depends=("glibc=$pkgver")
   provides=("lib32-glibc=$pkgver")
   conflicts=("lib32-glibc")
@@ -265,15 +265,12 @@ package_lib32-glibc-wsl1() {
   if check_option 'debug' n; then
     find "$pkgdir"/usr/lib32 -name '*.a' -type f -exec strip $STRIP_STATIC {} + 2> /dev/null || true
     find "$pkgdir"/usr/lib32 \
-      -not -name 'ld-*.so' \
-      -not -name 'libc-*.so' \
-      -not -name 'libpthread-*.so' \
-      -not -name 'libthread_db-*.so' \
-      -name '*-*.so' -type f -exec strip $STRIP_SHARED {} + 2> /dev/null || true
+      -not -name 'ld-*.so*' \
+      -not -name 'libc.so*' \
+      -not -name 'libpthread.so*' \
+      -not -name 'libthread_db.so*' \
+      -name '*.so*' -type f -exec strip $STRIP_SHARED {} + 2> /dev/null || true
   fi
-
-  # Provided by lib32-libxcrypt; keep the old shared library for backwards compatibility
-  rm -f "$pkgdir"/usr/lib32/libcrypt.{a,so}
 
   # Make copies of documentations
   find "$srcdir/glibc/" -maxdepth 1 -type f | grep '/[A-Z.]\{1,\}$' | xargs install -Dm644 -t "$pkgdir/usr/share/doc/lib32-glibc"
